NEXT-504 - search through entitys on list pages

--- a/Resources/administration/src/app/component/structure/sw-desktop/sw-desktop.less
+++ b/Resources/administration/src/app/component/structure/sw-desktop/sw-desktop.less
@@ -6,7 +6,7 @@
     width: 100%;
     overflow: hidden;
 
-    .sw-desktop__content {
+    .sw-page__wrapper {
         width: 100%;
         height: 100%;
         display: grid;
