--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -1,6 +1,12 @@
 {% block sw_order_list %}
     <sw-page class="sw-order-list">
 
+        {% block sw_order_list_search_bar_type %}
+            <template slot="search-bar-type">
+                {{ $tc('sw-order.general.mainMenuItemGeneral') }}:
+            </template>
+        {% endblock %}
+
         {% block sw_order_list_smart_bar_header %}
             <template slot="smart-bar-header">
                 {% block sw_order_list_smart_bar_header_title %}
