NEXT-392 - Improve transition code style, remove unneeded condition

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
@@ -7,9 +7,9 @@
 @sw-admin-menu-width-collapsed:         80px;
 @sw-admin-menu-width-flyout:            220px;
 @sw-admin-menu-z-index-flyout:          500;
-@sw-admin-menu-transition:              .4s cubic-bezier(.50,.32,.01,1);
-@sw-admin-menu-sub-menu-transition:     .35s cubic-bezier(.50,.32,.01,1);
-@sw-admin-menu-flyout-transition:       .2s cubic-bezier(.50,.32,.01,1);
+@sw-admin-menu-transition:              .4s cubic-bezier(.50, .32, .01, 1);
+@sw-admin-menu-sub-menu-transition:     .35s cubic-bezier(.50, .32, .01, 1);
+@sw-admin-menu-flyout-transition:       .2s cubic-bezier(.50, .32, .01, 1);
 @sw-admin-menu-color-active:            lighten(@color-gradient-dark-gray-start, 3%);
 @sw-admin-menu-color-hover:             lighten(@color-gradient-dark-gray-start, 6%);
 @sw-admin-menu-shop-status-ok:          @color-emerald;
