NEXT-412 implemented quickinfo for media objects

--- a/Resources/administration/src/app/component/base/sw-sidebar-item/sw-sidebar-item.html.twig
+++ b/Resources/administration/src/app/component/base/sw-sidebar-item/sw-sidebar-item.html.twig
@@ -1,14 +1,25 @@
 {% block sw_sidebar_item %}
     <div class="sw-sidebar-item">
         {% block sw_sidebar_item_button %}
-            <button class="sw-sidebar-item__button" :class="{ 'is-active': isExpanded, 'is-disabled': disabled }" @click="toggleContentPanel">
+            <button class="sw-sidebar-item__button" :class="sidebarItemClasses" @click="toggleContentPanel">
                 {% block sw_sidebar_item_icon %}<sw-icon :name="icon" size="20px" :title="title"></sw-icon>{% endblock %}
             </button>
         {% endblock %}
 
         {% block sw_sidebar_item_content %}
             <div class="sw-sidebar-item__content" v-if="isExpanded">
-                {% block sw_sidebar_item_title %}<h1 class="sw-sidebar-item__headline">{{ title }}</h1>{% endblock %}
+                {% block sw_sidebar_item_headline %}
+                    <div class="sw-sidebar-item__headline">
+                        {% block sw_sidebar_item_title %}
+                            <h1 class="sw-sidebar-item__title">{{ title }}</h1>
+                        {% endblock %}
+                        {% block sw_sidebar_item_close_button %}
+                            <div class="sw-sidebar-item__close-button" @click="toggleContentPanel">
+                                <sw-icon name="small-default-x-line-small"></sw-icon>
+                            </div>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
                 <slot>{% block sw_sidebar_item_slot_default %}{% endblock %}</slot>
             </div>
         {% endblock %}
