--- a/Resources/administration/src/module/sw-mediamanager/page/sw-mediamanager-catalog/sw-mediamanager-catalog.less
+++ b/Resources/administration/src/module/sw-mediamanager/page/sw-mediamanager-catalog/sw-mediamanager-catalog.less
@@ -17,6 +17,7 @@
 
     .sw-mediamanager-catalog__content {
         display: grid;
+        grid-template-rows: 70px auto 64px;
         position:absolute;
         height: 100%;
         width: 100%;
