--- a/Resources/administration/src/app/component/base/sw-sidebar-item/sw-sidebar-item.less
+++ b/Resources/administration/src/app/component/base/sw-sidebar-item/sw-sidebar-item.less
@@ -10,9 +10,9 @@
 .sw-sidebar-item {
     .sw-sidebar-item__content {
         position: absolute;
-        z-index: 0;
+        z-index: 1;
         right: 64px;
-        width: 255px;
+        width: 400px;
         top: 0; bottom: 0;
         border-left: 1px solid @sw-sidebar-color-border;
         overflow: hidden;
@@ -21,9 +21,18 @@
     }
 
     .sw-sidebar-item__headline {
+        display: grid;
+        grid-template-columns: auto 64px;
+    }
+
+    .sw-sidebar-item__title {
         font-size: 18px;
         line-height: 23px;
         color: @sw-sidebar-color-headline;
+    }
+
+    .sw-sidebar-item__close-button {
+        justify-self: end;
     }
 
     .sw-sidebar-item__button {
@@ -41,12 +50,12 @@
         &:hover {
             background: @sw-sidebar-hover-color-background;
         }
-        &.is-active {
+        &.is--active {
             background: @sw-sidebar-active-color-background;
             color: @sw-sidebar-active-icon-color;
         }
 
-        &.is-disabled {
+        &.is--disabled {
             cursor: not-allowed;
             opacity: .3;
         }
