--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
@@ -1,10 +1,10 @@
 {%  block sw_media_grid_item %}
-    <div :class="mediaItemClasses"
-         v-on="gridItemListeners">
+    <div class="sw-media-grid-item" :class="mediaItemClasses" v-on="gridItemListeners">
         {% block sw_media_grid_item_content %}
-            <div :class="mediaItemContentClasses">
+            <div class="sw-media-grid-item__content" :class="mediaItemContentClasses">
                 {% block sw_media_grid_item_selection_condition %}
-                    <div :class="selectedIndicatorClasses"
+                    <div class="sw-media-grid-item__selected-indicator"
+                         :class="selectedIndicatorClasses"
                          v-if="containerOptions.selectable && !isListItemPreview">
                         {% block sw_media_grid_item_selected_indicator %}
                             <sw-field type="checkbox" :value="selected"></sw-field>
