--- a/Resources/administration/src/module/sw-mediamanager/component/sidebar/sw-mediamanager-sidebar/sw-mediamanager-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-mediamanager/component/sidebar/sw-mediamanager-sidebar/sw-mediamanager-sidebar.html.twig
@@ -7,8 +7,8 @@
                         <div class="sw-mediamanager-sidebar__items-top">
                             {% block sw_mediamanager_sidebar_actions_quickinfo %}
                                 <sw-sidebar-item icon="default-action-document-view"
-                                                 :title="$tc('sw-mediamanager.sidebar.actions.quickInfo')"
-                                                 :disabled="true">
+                                                 :title="$tc('sw-mediamanager.sidebar.actions.quickInfo')">
+                                    <sw-mediamanager-quickinfo :item="item" v-on="$listeners"></sw-mediamanager-quickinfo>
                                 </sw-sidebar-item>
                             {% endblock %}
                             {% block sw_mediamanager_sidebar_actions_filter %}
@@ -24,21 +24,19 @@
                         <div class="sw-mediamanager-sidebar__items-bottom">
                             {% block sw_mediamanager_sidebar_actions_move_file %}
                                 <sw-sidebar-item icon="default-action-move-file"
-                                                 :title="$tc('sw-mediamanager.sidebar.actions.move')"
-                                                 :disabled="true">
+                                                 @click="emitRequestMoveSelection">
                                 </sw-sidebar-item>
                             {% endblock %}
 
                             {% block sw_mediamanager_sidebar_actions_delete_file %}
                                 <sw-sidebar-item icon="default-action-trash"
-                                                 :title="$tc('sw-mediamanager.sidebar.actions.delete')"
-                                                 :disabled="true">
+                                                 @click="emitRequestRemoveSelection">
                                 </sw-sidebar-item>
                             {% endblock %}
 
                             {% block sw_mediamanager_sidebar_actions_settings %}
                                 <sw-sidebar-item icon="default-action-settings"
-                                                 :title="$tc('sw-mediamanager.sidebar.actions.more')"
+                                                 :title="$tc('sw-mediamanager.sidebar.actions.settings')"
                                                  :disabled="true">
                                 </sw-sidebar-item>
                             {% endblock %}
