NEXT-467 - Add empty state and loading indicators

--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -36,6 +36,9 @@
 
                         {% block sw_modal_body %}
                             <div class="sw-modal__body">
+                                {% block sw_card_loader %}
+                                    <sw-loader v-if="isLoading"></sw-loader>
+                                {% endblock %}
                                 <slot>
                                     {% block sw_modal_slot_default %}{% endblock %}
                                 </slot>
