--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
@@ -1,22 +1,21 @@
 {% block sw_page %}
     <div class="sw-page__wrapper">
-        {% block sw_desktop_search_bar %}
+
+        {% block sw_page_search_bar %}
             <sw-search-bar>
 
-                <template slot="search-type">
-                    <slot name="search-bar-type">
-
-                    </slot>
-                </template>
-
-
+                {% block sw_page_search_bar_type %}
+                    <template slot="search-type">
+                        <slot name="search-bar-type">
+                            {% block sw_page_search_bar_type_slot %}{% endblock %}
+                        </slot>
+                    </template>
+                {% endblock %}
 
             </sw-search-bar>
         {% endblock %}
 
         <div class="sw-page">
-
-
             {% block sw_page_smart_bar %}
                 <div class="sw-page__smart-bar"
                      :style="{ 'border-bottom-color': pageColor, paddingRight: `${scrollbarOffset}px` }">
