--- a/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.less
+++ b/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.less
@@ -1,49 +1,49 @@
 @import "~less/variables";
-@sw-search-bar-results-border-color:    @color-steam-cloud;
-@sw-search-bar-background-color:    @color-white;
+
+@sw-search-bar-border-color:             @color-steam-cloud;
+@sw-search-bar-background-color:         @color-white;
+@sw-search-bar-results-background-color: @color-white;
+@sw-search-bar-border-radius:            @border-radius-default;
+@sw-search-bar-results-box-shadow:       0 3px 6px 0 rgba(120, 138, 155, 0.3);
+@sw-search-bar-results-z-index:          800;
+@sw-search-bar-z-index:                  500;
 
 .sw-search-bar {
-    display: flex;
     width: 100%;
     height: 80px;
     background: @sw-search-bar-background-color;
-    z-index: 500;
-    border-bottom: 1px solid @sw-search-bar-results-border-color;
+    z-index: @sw-search-bar-z-index;
+    border-bottom: 1px solid @sw-search-bar-border-color;
     align-content: center;
 
-    .sw-search-bar__holder {
-        padding: 15px;
-        width: 800px;
+    .sw-search-bar__container {
+        padding: 15px 40px;
+        max-width: 880px;
         margin: 0 auto;
+        position: relative;
     }
 
     .sw-search-bar__field {
         margin-bottom: 0;
-        //text-align: center;
-        border: 1px solid @sw-search-bar-results-border-color;
-        border-radius: @border-radius-default;
+        border: 1px solid @sw-search-bar-border-color;
+        border-radius: @sw-search-bar-border-radius;
         padding: 9px 10px;
         position: relative;
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         height: 50px;
 
         &.is--active {
             border-color: @color-shopware-blue;
         }
 
-        //input {
-        //    line-height: 30px;
-        //    padding-left: 50px;
-        //}
-
         .sw-icon {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            //margin-top: -8px;
             right: 15px;
             color: @color-gutenberg;
+            pointer-events: none;
         }
     }
 
@@ -52,7 +52,7 @@
         color: @color-white;
         display: inline-block;
         padding: 5px 12px;
-        border-radius: @border-radius-default;
+        border-radius: @sw-search-bar-border-radius;
         flex-shrink: 0;
         font-weight: 600;
     }
@@ -61,8 +61,6 @@
         font-family: @font-family-default;
         color: @color-gutenberg;
         flex-grow: 1;
-        //min-width: 200px;
-        //width: 100%;
         font-size: 15px;
         padding: 0 40px 0 15px;
         border: 0;
@@ -75,26 +73,24 @@
     }
 
     .sw-search-bar__results {
-        overflow: auto;
+        height: 340px;
         position: absolute;
-        width: 100%;
-        height: 100%;
-        right: 0;
-        top: 80px;
-        background-color: rgba(255, 255, 255, 0.9);
-        z-index: 800;
+        right: 40px;
+        left: 40px;
+        top: 73px;
+        z-index: @sw-search-bar-results-z-index;
+        padding: 25px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        background-color: @sw-search-bar-results-background-color;
+        border: 1px solid @sw-search-bar-border-color;
+        border-radius: @sw-search-bar-border-radius;
+        box-shadow: @sw-search-bar-results-box-shadow;
     }
 
     .sw-search-bar__results-list {
-        width: 800px;
-        margin: 20px auto;
+        margin: 0;
         padding: 0;
         list-style: none;
-    }
-
-    .sw-alert {
-        width: 800px;
-        max-width: 800px;
-        margin: 20px auto;
     }
 }
